--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,4 +14,6 @@ parserOptions:
 plugins:
   - react
   - '@typescript-eslint'
-rules: {}
+rules: {
+  "@typescript-eslint/no-explicit-any": "off"
+}
